<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Recipe.RecipePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Recipe_Image"
            android:layout_width="267dp"
            android:layout_height="212dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/recipe_image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.361"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Recipe_Name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_below="@+id/Recipe_Image"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Image"
            tools:layout_editor_absoluteX="0dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/dif_text"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:layout_below="@+id/Recipe_Name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="12dp"
            android:gravity="center|center_horizontal"
            android:text="@string/recipe_dif"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/recipe_dif"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name" />

        <TextView
            android:id="@+id/recipe_dif"
            android:layout_width="100dp"
            android:layout_height="49dp"
            android:layout_below="@+id/Recipe_Name"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@+id/dif_text"
            android:layout_toLeftOf="@+id/dif_text"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/clock_icon"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name" />

        <TextView
            android:id="@+id/person_per_recipe"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:layout_below="@+id/Recipe_Name"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name" />

        <TextView
            android:id="@+id/time_to_cook"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:layout_below="@+id/Recipe_Name"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/people_icon"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name" />

        <ImageView
            android:id="@+id/favorite_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/favoritebutton"
            android:src="@drawable/ic_favorite_not_selected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/people_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_number_people_for_recipe"
            app:layout_constraintEnd_toStartOf="@+id/person_per_recipe"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name"
            android:contentDescription="@string/people_icon_description" />

        <ImageView
            android:id="@+id/clock_icon"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_time_to_cook_recipe"
            app:layout_constraintEnd_toStartOf="@+id/time_to_cook"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name"
            android:contentDescription="@string/clock_icon_description" />


        <TextView
            android:id="@+id/available_ingredients_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/available_ingredients"
            android:textAlignment="gravity"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clock_icon"
            android:gravity="start" />

        <RelativeLayout
            android:id="@+id/available_ingredients_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/available_ingredients_text"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/ingredient_name2"
                android:layout_width="343dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ingredient_name1"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="-1dp"
                android:layout_marginRight="-1dp"
                android:layout_toEndOf="@+id/ingredient_image2"
                android:layout_toRightOf="@+id/ingredient_image2"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/ingredient_name3"
                android:layout_width="343dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ingredient_name2"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_toEndOf="@+id/ingredient_image3"
                android:layout_toRightOf="@+id/ingredient_image3"
                android:gravity="center_vertical" />

            <ImageView
                android:id="@+id/ingredient_image3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ingredient_image2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/image3" />

            <ImageView
                android:id="@+id/ingredient_image1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/image1" />

            <TextView
                android:id="@+id/ingredient_name1"
                android:layout_width="343dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_toEndOf="@+id/ingredient_image2"
                android:layout_toRightOf="@+id/ingredient_image2"
                android:gravity="center_vertical" />

            <ImageView
                android:id="@+id/ingredient_image2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ingredient_image1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/image2" />

        </RelativeLayout>

        <TextView
            android:id="@+id/missing_ingredients_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="start"
            android:text="@string/missing_ingredients"
            android:textAlignment="gravity"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/available_ingredients_cards"
            tools:layout_editor_absoluteX="0dp" />

        <RelativeLayout
            android:id="@+id/missing_ingredients_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/missing_ingredients_text"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/ingredient_name6"
                android:layout_width="343dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ingredient_name5"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_toEndOf="@+id/ingredient_image6"
                android:layout_toRightOf="@+id/ingredient_image6"
                android:gravity="center_vertical" />

            <ImageView
                android:id="@+id/ingredient_image6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ingredient_image5"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/image6" />

            <TextView
                android:id="@+id/ingredient_name5"
                android:layout_width="343dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ingredient_name4"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_toEndOf="@+id/ingredient_image5"
                android:layout_toRightOf="@+id/ingredient_image5"
                android:gravity="center_vertical" />

            <ImageView
                android:id="@+id/ingredient_image4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/image4" />

            <TextView
                android:id="@+id/ingredient_name4"
                android:layout_width="343dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/ingredient_image4"
                android:layout_toRightOf="@+id/ingredient_image4"
                android:gravity="center_vertical" />

            <ImageView
                android:id="@+id/ingredient_image5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ingredient_image4"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/image5" />

        </RelativeLayout>

        <TextView
            android:id="@+id/instructionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="Instructions"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/missing_ingredients_cards" />

        <TextView
            android:id="@+id/instructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/instructionsTitle"
            tools:layout_editor_absoluteX="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>