<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.whatsinmyfridge.objects.RecipePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Recipe_Image"
            android:layout_width="267dp"
            android:layout_height="212dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/recipe_image_description" />

        <TextView
            android:id="@+id/Recipe_Name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:text="Falta ir buscar à base de dados"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_below="@+id/Recipe_Image"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Image"
            tools:layout_editor_absoluteX="0dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/dif_text"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:layout_below="@+id/Recipe_Name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/recipe_dif"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/recipe_dif"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name" />

        <TextView
            android:id="@+id/recipe_dif"
            android:layout_width="100dp"
            android:layout_height="49dp"
            android:layout_below="@+id/Recipe_Name"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@+id/dif_text"
            android:layout_toLeftOf="@+id/dif_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/clock_icon"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/person_per_recipe"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:layout_below="@+id/Recipe_Name"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name" />

        <TextView
            android:id="@+id/time_to_cook"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:layout_below="@+id/Recipe_Name"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toStartOf="@+id/people_icon"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name" />

        <ImageView
            android:id="@+id/people_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_number_people_for_recipe"
            app:layout_constraintEnd_toStartOf="@+id/person_per_recipe"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name"
            android:contentDescription="@string/people_icon_description" />

        <ImageView
            android:id="@+id/clock_icon"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_time_to_cook_recipe"
            app:layout_constraintEnd_toStartOf="@+id/time_to_cook"
            app:layout_constraintTop_toBottomOf="@+id/Recipe_Name"
            android:contentDescription="@string/clock_icon_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:ignore="MissingConstraints"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>